--- a/index.html
+++ b/index.html
@@ -104,10 +104,13 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link menu-link" href="https://trojan.aresprotocol.io" 
-                                            target="_blank">Farms</a>
+                                        data-i18n="lag.t66" target="_blank">Farms</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link menu-link uniswap" href="javascript:;">Uniswap</a>
+                                        <a   data-i18n="lag.t65" class="nav-link menu-link uniswap" href="https://www.gateio.pro/cn/trade/ARES_USDT">Buy token</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link menu-link uniswap" href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x358aa737e033f34df7c54306960a38d09aabd523&use=V2">Uniswap</a>
                                     </li>
                                 </ul>
                             </div>
