--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                                         Copyright &copy; 2021.The Ares Protocol All rights reserved.
                                     </p>
                                     <p class="footer-desc">
-                                        info@aresprotocol.com
+                                        info@aresprotocol.io
                                     </p>
                                     <div class="footer-social-links">
                                         <a href="https://t.me/aresprotocol" target="_blank">
