--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                                             <a href="#" data-i18n="lag.t62">Explorer</a>
                                         </li>
                                         <li>
-                                            <a href="https://market.aresprotocol.com/" data-i18n="lag.t63"
+                                            <a href="mailto:info@aresprotocol.io" data-i18n="lag.t63"
                                                 target="_blank">Market</a>
                                         </li>
 
